@@ -967,4 +967,9 @@
 #define ER_CANNOT_CONVERT_CHARACTER 1977
 #define ER_INVALID_DEFAULT_VALUE_FOR_FIELD 1978
 #define ER_KILL_QUERY_DENIED_ERROR 1979
-#define ER_ERROR_LAST 1979
+
+/* yzhou added */
+#define ER_INTERNAL_GET_ROUTE   10000
+
+#define ER_ERROR_LAST 10000 /*1979*/
+
